--- a/src/app/desktopUI/contract-details/contract-details.component.scss
+++ b/src/app/desktopUI/contract-details/contract-details.component.scss
@@ -130,7 +130,7 @@
             font-family: Gilroy;
             font-style: normal;
             font-weight: 600;
-            font-size: clamp(2rem, 2.5vw, 3rem);
+            font-size: clamp(1.7rem, 2.3vw, 3rem);
             margin-top: 0.5rem;
             color: #212529;
         }
@@ -191,6 +191,18 @@
     .button{
         .start-button{
             border: 1px solid #e28f7a;
+            border-radius: 15px;
+            font-family: Gilroy;
+            font-style: normal;
+            font-weight: bold;
+            color: #FFFFFF;
+            font-size: 1.4rem;
+            padding: 0.3rem 0.9rem;
+        }
+
+        .stop-button{
+            border: 1px solid #FD4F56;
+            background-color: #FD4F56;
             border-radius: 15px;
             font-family: Gilroy;
             font-style: normal;
@@ -320,4 +332,44 @@
             margin-bottom: 0.7rem;
         }
     }
+
+    .manual-buttons{
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+    }
+
+    // .manual-button{
+
+    // }
+
+    .manual-section{
+        margin-top: 2rem;
+        display: flex;
+        flex-direction: column;
+        align-items: stretch;
+    }
+
+    .date-picker{
+        border: 1px solid $primary-color;
+    }
+
+
+    .time-picker{
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+
+    }
+
+    .timer-input{
+        width: 45%;
+    }
+
+    .timer-to{
+        width: 10%;
+        margin: 1rem;
+        font-size: 1rem;
+    }
+
 }
