--- a/src/app/desktopUI/login/login.component.html
+++ b/src/app/desktopUI/login/login.component.html
@@ -1,18 +1,12 @@
 <div class="container-fluid wrapper">
+    <app-spinner *ngIf="isLoading"></app-spinner>
     <div class="row">
         <div class="col-12">
             <mat-card class="login-card mat-elevation-z0" >
-                <img src="assets/logos/gigwork-logo.svg" class="logo" /><span class="logo-text">Gigworks</span>
+                <!-- <img src="assets/logos/gigwork-logo.svg" class="logo" /><span class="logo-text">Gigworks</span> -->
                 <div class="form-content m-0 p-0">
                     <img src="assets/logos/gigwork-logo-long.svg" class="logo-long" />
-                    <section class="spinner-section" *ngIf="isLoading">
-                        <mat-progress-spinner
-                            class="spinner-margin"
-                            [color]="color"
-                            [mode]="mode">
-                        </mat-progress-spinner>
-                    </section>
-                    <mat-card-content class="card-content" *ngIf="!isLoading">
+                    <mat-card-content class="card-content">
                         <form [formGroup]="loginForm">
                             <!-- <mat-error *ngIf="!loginForm.valid && loginForm.touched">{{getErrorMessage()}}</mat-error> -->
                             <mat-form-field appearance="outline" class="input-wrapper">
@@ -33,32 +27,27 @@
                             <mat-checkbox class="checkbox" formControlName="rememberMe">Remember Me</mat-checkbox>
                         </form>
                     </mat-card-content>
-                    <mat-card-actions class="card-action" *ngIf="!isLoading">
+                    <mat-card-actions class="card-action">
                         <div class="button-section">
                             <button mat-raised-button color="primary" class="button email-login" (click)="onSubmit()">Login</button>
                             <div class="hr-div">
                                 <hr class="hr" />
                                 <p class="hr-text">OR</p>
                             </div>
-                            <button mat-raised-button class="button facebook-login" (click)="onSubmitFacebook()" *ngIf="!authUser"> 
+                            <button mat-raised-button class="button facebook-login" (click)="onSubmitFacebook()"> 
                                 <mat-icon aria-hidden="false" aria-label="home icon" class="button-icon">facebook</mat-icon>
                                 <span>Continue with <span [ngStyle]="{fontWeight: '600'}">Facebook</span></span>
                             </button>
-                            <button mat-raised-button class="button google-login" (click)="onSubmitGoogle()" *ngIf="!authUser">
+                            <button mat-raised-button class="button google-login" (click)="onSubmitGoogle()">
                                 <img src="assets/logos/google-icon.svg" class="google-icon" />
                                 Continue with <span [ngStyle]="{fontWeight: '600'}">Google</span>
                             </button>
-                            <button mat-raised-button class="button apple-login" (click)="onSubmitApple()" *ngIf="!authUser">
+                            <button mat-raised-button class="button apple-login" (click)="onSubmitApple()">
                                 <mat-icon aria-hidden="false" aria-label="home icon" class="button-icon">apple</mat-icon>
                                 Continue with <span [ngStyle]="{fontWeight: '600'}">Apple</span>
                             </button>
-                            <button mat-raised-button class="button google-login" (click)="onLogout()" *ngIf="authUser">
-                                <img src="assets/logos/google-icon.svg" class="google-icon" />
-                                Signout from <span [ngStyle]="{fontWeight: '600'}">Gigworks</span>
-                            </button>
                         </div>
                         <p>Don't have an account?</p>
-
                     </mat-card-actions>
                 </div>
             </mat-card>
