--- a/src/scss/material-theme.scss
+++ b/src/scss/material-theme.scss
@@ -7,9 +7,14 @@
 
 // @include mat.core($custom-typography);
 
-$my-primary: mat.define-palette(mat.$gigwork-primary-palette, 800);
-$my-accent: mat.define-palette(mat.$gigwork-primary-palette, A200, A100, A400);
+
+$my-primary: mat.define-palette(mat.$orange-palette, 700);
+$my-accent: mat.define-palette(mat.$orange-palette, A200, A100, A400);
 $my-warn: mat.define-palette(mat.$red-palette);
+
+// $my-primary: mat.define-palette(mat.$gigwork-primary-palette, 800);
+// $my-accent: mat.define-palette(mat.$gigwork-primary-palette, A200, A100, A400);
+// $my-warn: mat.define-palette(mat.$red-palette);
 
 $my-theme: mat.define-light-theme((
     color: (
